# terminalChessAI

./: .gitignore  CMakeLists.txt  Makefile  README.md  board.cpp  board.h  chess  chessAI.cpp  chessAI.h  chesslogic.cpp  chesslogic.h  main.cpp  moveinfo.h  pieces.h  run_chess.sh  test  testColors.cpp
ai/: chessAI.cpp  chessAI.h
board/: board.cpp  board.h
logic/: chesslogic.cpp  chesslogic.h
utils/: globals.h  moveinfo.h
